--- a/core/core/templates/service_users/create.html
+++ b/core/core/templates/service_users/create.html
@@ -48,10 +48,12 @@
                         </div>
                     </div>
 
-                    <!-- DOB -->
+                    <!-- DOB - Fixed to properly format the date -->
                     <div class="form-group">
                         <label>Date of Birth *</label>
-                        <input type="date" class="form-control" name="dob" value="{{ form.instance.dob|default:'' }}" required>
+                        <input type="date" class="form-control" name="dob"
+                               value="{% if form.instance.dob %}{{ form.instance.dob|date:'Y-m-d' }}{% endif %}"
+                               required>
                     </div>
 
                     <!-- Contact Info -->
